--- a/public/404.html
+++ b/public/404.html
@@ -2,10 +2,11 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Redirecting...</title>
+    <title>Task Pro</title>
     <script type="text/javascript">
-        // React için GitHub Pages routing fix
-        var pathSegmentsToKeep = 1; // taskpro-frontend için
+        // Single Page Apps for GitHub Pages
+        // https://github.com/rafgraph/spa-github-pages
+        var pathSegmentsToKeep = 1;
         
         var l = window.location;
         l.replace(
@@ -19,6 +20,6 @@
     </script>
 </head>
 <body>
-    <div>Redirecting...</div>
+    <div>Yönlendiriliyor...</div>
 </body>
 </html>
